# guano

./: .gitignore  Cargo.toml  example.gno  main.guano  out.txt
crates/guano-ast/: Cargo.toml
crates/guano-ast/src/: lib.rs  parsing.rs
crates/guano-ast/src/desugar/: block.rs  mod.rs  source_file.rs
crates/guano-ast/src/desugar/declaration/: class.rs  function.rs  mod.rs  prototype.rs
crates/guano-ast/src/desugar/statement/: conditional.rs  mod.rs
crates/guano-ast/src/grammar/: guano.pest
crates/guano-ast/src/old_ast/: error.rs  helpers.rs  node.rs  span.rs
crates/guano-ast/src/old_ast/block/: statement.rs
crates/guano-ast/src/old_ast/declaration/: function.rs  import.rs  prototype.rs  variable.rs
crates/guano-ast/src/old_ast/expression/: unary.rs
crates/guano-ast/src/old_ast/expression/primary/: if.rs  return.rs  this.rs
crates/guano-ast/src/old_ast/expression/primary/literal/: char.rs  keyword.rs  mod.rs  string.rs
crates/guano-ast/src/old_ast/implementation/: type.rs
crates/guano-ast/src/old_ast/symbol/: iden.rs
crates/guano-ast/src/parser/: block.rs  error.rs  expression.rs  function.rs  identifier.rs  literal.rs  mod.rs  operator.rs  parser.rs  scope.rs  source_file.rs  span.rs  token_stream.rs  typing.rs
crates/guano-ast/src/parser/declaration/: class.rs  function.rs  import.rs  mod.rs  procedure.rs  prototype.rs  type_alias.rs  variable.rs
crates/guano-ast/src/parser/expression/: display.rs  literal.rs  mod.rs  operator.rs  parser.rs  simplify.rs
crates/guano-ast/src/parser/expression/parser/: access.rs  bitwise.rs  cast.rs  comparison.rs  external.rs  factor.rs  list.rs  literal.rs  logical.rs  mod.rs  paren.rs  term.rs  unary.rs
crates/guano-ast/src/parser/operator/: assignment.rs  bitwise.rs  comparison.rs  factor.rs  logical.rs  mod.rs  term.rs  unary.rs
crates/guano-ast/src/parser/statement/: block.rs  conditional.rs  for_loop.rs  function.rs  mod.rs  statement.rs  variable.rs  while_loop.rs
crates/guano-ast/src/parsing/: combinators.rs  context.rs  parsers.rs  regex_registry.rs
crates/guano-ast/src/parsing/combinators/: alternation.rs  ast.rs  between.rs  char.rs  chars.rs  count.rs  errors.rs  expect.rs  map.rs  not.rs  optional.rs  peek.rs  prefixed.rs  regex.rs  repeated.rs  spanned.rs  suffixed.rs  tag.rs  tuple.rs
crates/guano-ast/src/parsing/parsers/: declaration.rs  expression.rs  ignorable.rs  implementation.rs  punctuation.rs  symbols.rs
crates/guano-ast/src/parsing/parsers/declaration/: class.rs  function.rs  import.rs  module.rs  prototype.rs  var.rs  variable.rs
crates/guano-ast/src/parsing/parsers/expression/: block.rs  pratt.rs  primary.rs
crates/guano-ast/src/parsing/parsers/expression/block/: for.rs  if.rs  loop.rs  statement.rs  while.rs
crates/guano-ast/src/parsing/parsers/expression/operator/: infix.rs  postfix.rs  prefix.rs
crates/guano-ast/src/parsing/parsers/expression/primary/: group.rs  keyword.rs  list.rs  literal.rs
crates/guano-ast/src/parsing/parsers/ignorable/: comment.rs  whitespace.rs
crates/guano-ast/src/parsing/parsers/symbols/: iden.rs  identifier.rs  keyword.rs  path.rs  ty.rs
crates/guano-common/: Cargo.toml
crates/guano-common/src/: lib.rs
crates/guano-files/: Cargo.toml
crates/guano-files/src/: file.rs  lib.rs  module.rs
crates/guano-jit/: Cargo.toml
crates/guano-lexer/: Cargo.toml  README.md
crates/guano-lexer/src/: escape_char.rs  format_string.rs  lib.rs  spanned_lexer.rs  token.rs
crates/guano-llvm/: Cargo.toml
crates/guano-parser/: Cargo.toml
crates/guano-parser/src/: lib.rs
crates/guano-parser/src/ast/: comment.rs  helpers.rs  mod.rs  prelude.rs  span.rs
crates/guano-parser/src/ast/block/: block.rs  statement.rs
crates/guano-parser/src/ast/declaration/: class.rs  function.rs  import.rs  mod.rs  modifier.rs  module.rs  prototype.rs  variable.rs
crates/guano-parser/src/ast/expression/: binary.rs  mod.rs  operator.rs  unary.rs
crates/guano-parser/src/ast/expression/postfix/: call.rs  cast.rs  field.rs  index.rs
crates/guano-parser/src/ast/expression/primary/: for.rs  group.rs  if.rs  list.rs  loop.rs  mod.rs  return.rs  this.rs  while.rs
crates/guano-parser/src/ast/expression/primary/literal/: char.rs  keyword.rs  mod.rs  (+1 more)
crates/guano-parser/src/ast/implementation/: mod.rs  prototype.rs  type.rs
crates/guano-parser/src/ast/parser/: combinators.rs  error.rs  mod.rs  parser.rs  regex_registry.rs
crates/guano-parser/src/ast/parser/combinators/: alternation.rs  between.rs  bytes.rs  chars.rs  count.rs  expect.rs  not.rs  optional.rs  or.rs  peek.rs  prefixed.rs  regex.rs  repeated.rs  spanned.rs  suffixed.rs  tag.rs  then.rs  tuple.rs
crates/guano-parser/src/ast/parser/string/: mod.rs  str.rs  string.rs
crates/guano-parser/src/ast/parsing/: combinators.rs  context.rs  error.rs  mod.rs
crates/guano-parser/src/ast/parsing/combinators/: alternation.rs  between.rs  char.rs  chars.rs  count.rs  errors.rs  expect.rs  map.rs  not.rs  optional.rs  peek.rs  prefixed.rs  regex.rs  repeated.rs  spanned.rs  suffixed.rs  tag.rs  tuple.rs
crates/guano-parser/src/ast/parsing/parsers/: mod.rs  punctuation.rs
crates/guano-parser/src/ast/symbol/: iden.rs  keyword.rs  path.rs  type.rs
crates/guano-parser/src/old_ast/: comment.rs  display.rs  mod.rs  prelude.rs
crates/guano-parser/src/old_ast/block/: block.rs  mod.rs
crates/guano-parser/src/old_ast/declaration/: class.rs  mod.rs  modifier.rs  module.rs
crates/guano-parser/src/old_ast/expression/: binary.rs  block.rs  mod.rs  operator.rs
crates/guano-parser/src/old_ast/expression/postfix/: call.rs  cast.rs  field.rs  index.rs  mod.rs
crates/guano-parser/src/old_ast/expression/primary/: for.rs  group.rs  list.rs  loop.rs  mod.rs  while.rs
crates/guano-parser/src/old_ast/implementation/: mod.rs  prototype.rs
crates/guano-parser/src/old_ast/symbol/: mod.rs  path.rs  type.rs
crates/guano-span/: Cargo.toml
crates/guano-span/src/: input.rs  lib.rs  span.rs
crates/guano-syntax/: Cargo.toml  README.md  guano.ungram
crates/guano-syntax/src/: consts.rs  lib.rs  nodes.rs  tokens.rs
(+62 files in other folders)
