[package]
name = "guano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[features]
ast = ["dep:guano-ast"]
semantics = ["dep:guano-semantics", "ast"]
bytecode = ["dep:guano-bytecode"]
runtime = ["bytecode", "dep:guano-runtime"]
llvm = ["dep:guano-llvm"]
jit = ["llvm", "dep:guano-jit"]
default = ["semantics", "runtime"]
all = ["default", "jit"]


[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
serde_json = "1.0"
ptree = { version = "0.4.0", features = ["value"] }
serde-value = "0.7.0"
glob = "0.3.0"
guano-ast = { path = "./crates/guano-ast", optional = true }
guano-semantics = { path = "./crates/guano-semantics", optional = true }
guano-bytecode = { path = "./crates/guano-bytecode", optional = true }
guano-runtime = { path = "./crates/guano-runtime", optional = true }
guano-llvm = { path = "./crates/guano-llvm", optional = true }
guano-jit = { path = "./crates/guano-jit", optional = true }
