[package]
name = "guano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]
# members = ["crates/guano-files", "crates/guano-span"]

[dependencies]
guano-common = { path = "./crates/guano-common" }
guano-ast = { path = "./crates/guano-ast"}
line-col = "0.2.1"
serde_json = "1.0"

[profile.release]
# strip = true
# lto = true