[package]
name = "guano-ast"
version = "0.1.0"
edition = "2021"
authors = ["Noah Shanaberger <noah@thenoah.party>"]
readme = "README.md"
homepage = "https://github.com/32Bites/guano/crates/guano-ast"
repository = "https://github.com/32Bites/crates/guano-ast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guano-lexer = { path = "../guano-lexer" }
itertools = "0.10.5"
num = { version = "0.4.0", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
thiserror = "1.0"
convert_case = "0.6.0"
codespan = "0.11.1"
indenter = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
dyn-clone = "1.0.9"