[package]
name = "guano-ast"
version = "0.1.0"
edition = "2021"
authors = ["Noah Shanaberger <noah@thenoah.party>"]
readme = "README.md"
homepage = "https://github.com/32Bites/guano/crates/guano-ast"
repository = "https://github.com/32Bites/crates/guano-ast"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num = { version = "0.4.0", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
thiserror = "1.0"
codespan = "0.11.1"
# codespan-reporting = "0.11.1"
owning_ref = "0.4.1"
pest = "2.4.1"
pest_derive = "2.4.1"
lazy_static = "1.4.0"
indexmap = "1.9.1"