[package]
name = "guano-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internment = { version = "0.7.0", features = ["arc", "serde"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
dashmap = "5.4.0"
ahash = "0.8.2"
sealed = "0.4"
rowan = "0.15.10"
rug = "1.19.0"
once_cell = "1.17.0"
regex = "1.7.1"
const_format = "0.2.30"
konst = "0.3.4"