[package]
name = "guano-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.5.8"
fs2 = "0.4.3"
owning_ref = "0.4.1"
walkdir = "2.3.2"
path-absolutize = "3.0.14"
relative-path = "1.7.3"
codespan-reporting = "0.11.1"
codespan = "0.11.1"