[package]
name = "guano-jit"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/32Bites/guano/crates/guano-jit"
repository = "https://github.com/32Bites/crates/guano-jit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
