[package]
edition = "2021"
name = "guano-parser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
nom = "7.1.2"
nom_locate = "4.0.0"
indenter = "0.3.3"
bitflags = "1.3.2"
internment = { version = "0.7.0", features = ["arc", "serde"] }
serde = { version = "1.0.152", features = ["derive"], optional = true }
guano-files = { path = "../guano-files" }
guano-span = { path = "../guano-span" }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
peak_alloc = "0.1.0"
serde-value = "0.7.0"
ptree = { version = "0.4.0", features = ["serde-value"] }
guano-parser = { path = ".", features = ["serde"] }