[package]
name = "guano-span"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guano-files = { path = "../guano-files" }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
nom = "7.1.2"
nom_locate = "4.0.0"
owning_ref = "0.4.1"