[package]
name = "guano-syntax"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guano-common = { path = "../guano-common" }

[build-dependencies]
guano-common = { path = "../guano-common" }
strum = { version = "0.24.1", features = ["derive"] }
build-helper = "0.1.1"
heck = "0.4.0"
proc-macro2 = "1.0.49"
quote = "1.0.23"
ungrammar = "1.16.1"
rust-format = { version = "0.3.4", features = ["token_stream"] }
itertools = "0.10.5"